fix(index): fix div id app

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Toca Aqui</title>
   </head>
   <body>
-    <!-- Index -->
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
